Argocd-deployment-gke/tic-tac-toe-project/kubernetes-manifests/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe-frontend-deployment
  labels:
    app: tic-tac-toe-frontend
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: tic-tac-toe-frontend
  template:
    metadata:
      labels:
        app: tic-tac-toe-frontend 
    spec:
      containers:
      - name: tic-tac-toe-frontend-container
        image: yourusername/tic-tac-toe-frontend:1.0.0 
        ports:
        - containerPort: 80 
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
