Argocd-deployment-gke/tic-tac-toe-project/kubernetes-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: tic-tac-toe-backend-service
spec:
  selector:
    app: tic-tac-toe-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
