Argocd-deployment-gke/tic-tac-toe-project/kubernetes-manifests/frontend-service.yaml
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: tic-tac-toe-frontend-service
spec:
  selector:
    app: tic-tac-toe-frontend 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80 
  type: LoadBalancer
