Argocd-deployment-gke/tic-tac-toe-project/kubernetes-manifests/frontend-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-frontend-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /   
spec:
  rules:
  - host: tic-tac-toe.your-domain.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
